# Scyclone-PyTorch

./: .gitignore  README.md  Scyclone_PyTorch.ipynb  Scyclone_PyTorch.open.ipynb  Scyclone_PyTorch_other_dataset.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  tensorboard.Dockerfile  training.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/BatchJobRegistration/: action.yml  index.js  training_AWS_Batch_job_def.json
.github/workflows/: aws.yml
Scyclone-PyTorch/: Scyclone_main.py  modules.py
authz/: s3_bucket_full_access.iam.json
scyclonepytorch/: Scyclone_main.py  args.py  datamodule.py  main_train.py  model.py  modules.py  train.py
