[tool.poetry]
name = "scyclonepytorch"
version = "0.1.0"
description = "Reimplementation of Scyclone with PyTorch"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/Scyclone-PyTorch"

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "*"
npvcc2016 = "^1.2.2"
torchaudio = "^0.7.0"
pytorch-lightning = "1.0.6"
fsspec = {extras = ["http", "s3"], version = "^0.8.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
