[tool.poetry]
name = "scyclonepytorch"
version = "0.1.0"
description = "Reimplementation of Scyclone with PyTorch"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/Scyclone-PyTorch"

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "*"
torchaudio = "^0.7.0"
pytorch-lightning = "^1.1.3"
fsspec = {extras = ["http", "s3"], version = "^0.8.4"}
boto3 = "^1.16.18"
npvcc2016 = "^2.0.1"
jsut = {git = "https://github.com/tarepan/jsut.git", rev = "main"}
jsss = {git = "https://github.com/tarepan/jsss.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
